# PPT-Generator-refactor

./: .gitignore  README.md  SPEC.md  pyproject.toml
docs/: index.md
docs/core/: cli.md  exceptions.md  generator.md  models.md  utils.md
docs/matching/: layout_matcher.md
docs/parsers/: markdown_parser.md
docs/prerendering/: prerendering.md
docs/rendering/: rendering.md
docs/templates/: template_loader.md
docs/themes/: template_development_guide.md  themes.md
examples/: advanced_features.md  advanced_features.pptx  product_intro.md  product_intro.pptx  technical_tutorial.md  technical_tutorial.pptx  ~$advanced_features.pptx
examples/scripts/: create_rich_template.py  generate_ppt.py
examples/templates/: template.pptx
scripts/: create_standard_template.py
src/ppt_generator/: __init__.py  cli.py
src/ppt_generator/core/: __init__.py  exceptions.py  generator.py  models.py
src/ppt_generator/matching/: __init__.py  layout_matcher.py  pagination.py
src/ppt_generator/parsers/: __init__.py  markdown_parser.py
src/ppt_generator/prerendering/: __init__.py  base.py  code_highlight.py  latex_renderer.py  mermaid_renderer.py  pipeline.py
src/ppt_generator/rendering/: __init__.py  io_effects.py
src/ppt_generator/templates/: __init__.py  template_loader.py
src/ppt_generator/themes/: __init__.py  theme_pack.py
src/ppt_generator/utils/: __init__.py
tests/: conftest.py
tests/integration/: test_basic.py  test_integration.py
tests/unit/: test_io_effects.py  test_layout_matcher.py  test_markdown_parser.py  test_pagination.py  test_prerendering.py  test_template_loader.py  test_theme_pack.py  test_utils.py
themes/business-blue/: layouts.yaml  manifest.yaml  style.yaml  template.pptx
themes/standard/: layouts.yaml  manifest.yaml  style.yaml
