[project]
name = "ppt-generator"
version = "1.0.0"
description = "Generate PowerPoint slides from structured markdown and a template PPT master."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "orjson>=3.9.0",
    "markdown-it-py>=3.0.0",
    "python-pptx>=0.7.0",
    "returns>=0.20.0",
    "PyYAML>=6.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
prerendering = [
    "pygments>=2.15.0",
    "matplotlib>=3.7.0",
]
test = [
    "pytest>=8.0",
]

[project.scripts]
ppt-generator = "ppt_generator.cli:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]